Add a second format to the tracing json/begin_recording endpoint.

The previous format was unspecified, untested, and using the older
category_filters format. This is incompatible with the newer included/excluded
categories format.

The new format is the same as the TraceConfig format. This CL also adds tests.

BUG=chromium:735124

Review-Url: https://codereview.chromium.org/2948033004
Cr-Commit-Position: refs/heads/master@{#481662}

Former-commit-id: 3e164f76405e21777fae49bd221e8d86e7df4bfd